src/objects/Harvest_User_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Harvest_ID__c</fullName>
        <externalId>true</externalId>
        <label>Harvest ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Harvest_User__c</fullName>
        <label>Harvest User</label>
        <referenceTo>Harvest_User__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Harvest_User_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hourly_rate__c</fullName>
        <label>Hourly rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Project_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Harvest_Project__c</referenceTo>
        <relationshipLabel>People</relationshipLabel>
        <relationshipName>Harvest_User_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Harvest User Assignment</label>
    <nameField>
        <displayFormat>UA-{000000}</displayFormat>
        <label>Harvest User Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Harvest User Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>